# win-ocr-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: Build.yml  CI.yml  Fmt.yml  cargo-test.yml  clippy.yml  rust-clippy.yml
bindings/: Cargo.toml  build.rs
bindings/src/: lib.rs
src/: bin.rs  lib.rs
